--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -51,14 +51,102 @@
   object-fit: cover;
 }
 
+.carousel-container .carousel.hero-banner .carousel-slide .carousel-slide-image picture > img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
 .carousel .carousel-slide .carousel-slide-content {
   z-index: 1;
   margin: 68px;
   padding: 16px;
   color: white;
   background-color: rgba(19 19 19 / 75%);
-  position: relative;
   width: var(--slide-content-width, auto);
+}
+
+.carousel-container .carousel.hero-banner .carousel-slide .carousel-slide-content {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  max-width: 1000px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: var(--news-button-text-colour);
+  text-align: center;
+  box-sizing: border-box;
+  padding: 0 60px;
+  background-color: unset;
+  margin: unset;
+}
+
+.carousel-container .carousel.hero-banner div.slide-legend > p {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0.03em;
+}
+
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide .carousel-slide-content {
+  background-color: unset;
+  text-align: center;
+  margin: 0;
+  opacity: 0;
+  transition: all 3s ease-in-out;
+
+  --slide-content-width: unset;
+
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  padding: 0 40px;
+}
+
+.carousel-container .carousel.hero-banner div.social-cr-wrapper p,
+.carousel-container .carousel.hero-banner.scrollable div.social-cr-wrapper p {
+  margin: 0;
+  line-height : 13px;
+}
+
+.carousel-container .carousel.hero-banner div.social-cr-wrapper .icon,
+.carousel-container .carousel.hero-banner.scrollable div.social-cr-wrapper .icon {
+  height: 40px;
+  width: 40px;
+  margin-right: 20px;
+}
+
+
+
+.carousel-container .carousel.hero-banner.scrollable div.slide-legend > p {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0.03em;
+}
+
+.carousel-container .carousel.hero-banner div.social-cr-wrapper p:last-of-type {
+  display: none;
+  font-size: 10px;
+}
+
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide .carousel-slide-content p {
+  font-size: 30px;
+  margin-top: 0;
+}
+
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide .direction-icon-section {
+    position: absolute;
+    bottom: 20px;
+    display: inline-block;
+    z-index: 1;
+    left: 20px;
+    transform: none;
+}
+
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide .direction-icon-section .icon {
+  width: 60px;
+  height: auto;
 }
 
 .carousel .carousel-slide-indicators {
@@ -72,19 +160,19 @@
 }
 
 .carousel .carousel-slide-indicator button {
-  width: 24px;
-  height: 24px;
+  width: 10px;
+  height: 10px;
   margin: 0;
   padding: 0;
   border-radius: 50%;
-  background-color: #dadada;
+  background-color: #c5cbcb;
   transition: background-color 0.2s;
 }
 
 .carousel .carousel-slide-indicator button:disabled,
 .carousel .carousel-slide-indicator button:hover,
 .carousel .carousel-slide-indicator button:focus-visible {
-  background-color: var(--text-color);
+  background-color: white;
 }
 
 .carousel .carousel-navigation-buttons {
@@ -135,6 +223,127 @@
   left: calc(50% - 2px);
 }
 
+.carousel-container .carousel.hero-banner .carousel-slide-indicators .carousel-slide-indicator,
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide-indicators .carousel-slide-indicator {
+  position: relative;
+  height: 14px;
+  width: 14px;
+  opacity: 1;
+  margin: 9px;
+}
+
+.carousel-container .carousel.hero-banner .carousel-slide-indicators  .carousel-slide-indicator button,
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide-indicators .carousel-slide-indicator button {
+  position: relative;
+  height: 14px;
+  border-radius: 50%;
+  width: 14px;
+  opacity: 1;
+}
+
+.carousel-container .carousel.hero-banner .carousel-slide .carousel-slide-content p strong em,
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide .carousel-slide-content p strong em{
+  color: var(--biencommun-carousel-color);
+  text-decoration: none;
+  font-style: normal;
+}
+
+.carousel-container .carousel.hero-banner div.social-cr-wrapper  {
+  position: absolute;
+  bottom: 37px;
+  left: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  z-index: 1;
+  color: var(--news-button-text-colour);
+  font-size: 10px;
+  font-weight: 250;
+}
+
+.carousel-container .carousel.hero-banner.scrollable div.social-cr-wrapper {
+  display: none;
+}
+
+.carousel-container .carousel.hero-banner div.slide-legend, .carousel-container .carousel.hero-banner.scrollable div.slide-legend {
+  position: absolute;
+  bottom: 48px;
+  display: inline-block;
+  right: 20px;
+  z-index: 1;
+}
+
+.carousel-container .carousel.hero-banner div.slide-legend > p > a {
+  color: var(--news-button-text-colour);
+}
+
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide a{
+  pointer-events: auto;
+}
+
+.carousel-container .carousel.hero-banner.scrollable div.slide-legend > p > a {
+  color: var(--news-button-text-colour);
+}
+
+.carousel-container .carousel.hero-banner div.slide-legend > p > a.any-link, .carousel-container .carousel.hero-banner.scrollable div.slide-legend > p > a.any-link {
+  text-decoration: none;
+  overflow-wrap: break-word;
+}
+
+.carousel-container .carousel.hero-banner div.slide-legend > p > a:hover {
+  text-decoration: none;
+  color: var(--btn-bg);
+}
+
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide .button-container:hover,
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide a:hover {
+  text-decoration: none;
+  opacity: 0.7;
+}
+
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide .carousel-slide-content p a {
+  padding-left: 54px;
+  background-image: url('/icons/fleche_right.svg');
+  background-position: left center;
+  background-repeat: no-repeat;
+  display: inline-block;
+  color: inherit;
+  line-height: 60px;
+  text-transform: uppercase;
+  letter-spacing: .2em;
+  background-color: transparent;
+  border: 0;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 0;
+}
+
+.carousel.carousel-vertical .carousel-slide-indicators {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: auto;
+  width: 48px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  z-index: 2;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  background: transparent;
+  max-height: 100%;
+  overflow-y: auto;
+  box-sizing: border-box;
+}
+
+.carousel-container .carousel.hero-banner .carousel-slide-indicators {
+  display: none;
+}
+
 @media (width >= 600px) {
   .carousel .carousel-navigation-buttons {
     left: 24px;
@@ -150,4 +359,335 @@
   .carousel .carousel-slide .carousel-slide-content[data-align='justify'] {
     --slide-content-width: auto;
   }
+
+ .carousel-container .carousel.hero-banner .carousel-slide-indicators {
+    display: flex;
+  }
+
+ .carousel-container .carousel.hero-banner .carousel-slide .carousel-slide-content {
+    padding: 0 20px;
+  }
+
+ .carousel-container .carousel.hero-banner .carousel-slide .carousel-slide-content p {
+    font-size: 46px;
+  }
+}
+
+ /* Vertical Carousel */
+
+ .carousel.carousel-vertical {
+  height: 600px;
+}
+
+.carousel.carousel-vertical .carousel-slides-container {
+   position: relative;
+   height: 100%;
+   overflow: hidden;
+}
+
+.carousel-container .carousel.hero-banner .carousel-slides-container {
+  height: 100vh;
+}
+
+iframe.carousel-container .carousel.hero-banner .carousel-slides-container {
+  height: 500px;
+}
+
+.carousel.carousel-vertical .carousel-slides {
+  position: relative;
+  display: block !important;
+  overflow: visible !important;
+  scroll-behavior: unset !important;
+  scroll-snap-type: none !important;
+}
+
+.carousel-container .carousel.hero-banner.carousel-vertical .carousel-slides {
+  position: unset;
+}
+
+/* stylelint-disable no-descending-specificity */
+.carousel.carousel-vertical .carousel-slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 2s ease-in-out;
+  display: block;
+  flex: none !important;
+  scroll-snap-align: unset !important;
+}
+
+.carousel.carousel-vertical .carousel-slide[aria-hidden="false"] {
+  opacity: 1;
+  pointer-events: auto;
+  z-index: 1;
+}
+
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide .carousel-slide-logo {
+  position: absolute;
+  z-index: 1;
+  top: 40px;
+  left: 20px;
+  width: 150px;
+  opacity: 0;
+  transition: all 700ms ease-in-out;
+}
+
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide.active .carousel-slide-logo {
+  opacity: 1;
+}
+
+@media (width <= 600px) {
+  .carousel.carousel-vertical {
+    height: 200px;
+  }
+}
+
+@media (width >= 600px) and (width <=900px) {
+  .carousel.carousel-vertical {
+    height: 400px;
+  }
+}
+
+@media (width >= 900px) {
+  .carousel.carousel-vertical {
+    height: 500px;
+  }
+
+  .carousel-container .carousel.hero-banner.scrollable .carousel-slide .direction-icon-section {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .carousel-container .carousel.hero-banner.scrollable .carousel-slide .direction-icon-section .icon {
+    width: 100%;
+    height: 100%;
+  }
+
+  .carousel-container .carousel.hero-banner.scrollable .carousel-slide .carousel-slide-content {
+    background-color: unset;
+    text-align: center;
+    margin: auto;
+    max-width: 1200px;
+  }
+
+  .carousel-container .carousel.hero-banner.scrollable .carousel-slide .carousel-slide-content p {
+    font-size: 50px;
+  }
+
+  .carousel-container .carousel.hero-banner.scrollable div.social-cr-wrapper {
+    position: absolute;
+    bottom: 29px;
+    left: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    z-index: 1;
+    color: var(--news-button-text-colour);
+    font-size: 10px;
+    font-weight: 250;
+  }
+
+  .carousel-container .carousel.hero-banner.scrollable div.social-cr-wrapper .button-container a {
+    background-color: unset;
+    padding: 0;
+  }
+
+  .carousel-container .carousel.hero-banner.scrollable .carousel-slide .carousel-slide-content p a {
+    font-size: 24px;
+  }
+
+ .carousel-container .carousel.hero-banner div.social-cr-wrapper,
+  .carousel-container .carousel.hero-banner.scrollable div.social-cr-wrapper {
+    bottom: 29px;
+  }
+
+ .carousel-container .carousel.hero-banner div.social-cr-wrapper p:last-of-type {
+    display: unset;
+  }
+
+ .carousel-container .carousel.hero-banner div.slide-legend,
+  .carousel-container .carousel.hero-banner.scrollable div.slide-legend {
+    bottom: 48px;
+  }
+
+ .carousel-container .carousel.hero-banner div.slide-legend > p,
+  .carousel-container .carousel.hero-banner.scrollable div.slide-legend > p {
+    font-size: 18px;
+  }
+
+ .carousel-container .carousel.hero-banner .carousel-slide .carousel-slide-content {
+    padding: 0 160px;
+  }
+
+ .carousel-container .carousel.hero-banner .carousel-slide .carousel-slide-content p {
+    font-size: 50px;
+  }
+
+ .carousel-container .carousel.hero-banner .carousel-slide-indicators .carousel-slide-indicator,
+  .carousel-container .carousel.hero-banner.scrollable .carousel-slide-indicators .carousel-slide-indicator {
+    position: relative;
+    margin: 9px 0 !important;
+    height: 18px;
+    width: 18px;
+    opacity: 1;
+  }
+
+ .carousel-container .carousel.hero-banner .carousel-slide-indicators  .carousel-slide-indicator button,
+  .carousel-container .carousel.hero-banner.scrollable .carousel-slide-indicators .carousel-slide-indicator button {
+    position: relative;
+    height: 18px;
+    border-radius: 50%;
+    width: 18px;
+    opacity: 1;
+  }
+}
+
+@media (width >= 1200px) {
+ .carousel-container .carousel.hero-banner div.social-cr-wrapper, .carousel-container .carousel.hero-banner.scrollable div.social-cr-wrapper {
+    bottom: 86px;
+    left: 100px;
+  }
+
+ .carousel-container .carousel.hero-banner div.slide-legend, .carousel-container .carousel.hero-banner.scrollable div.slide-legend {
+    bottom: 100px;
+    right: 100px;
+  }
+
+ .carousel-container .carousel.hero-banner div.slide-legend > p, .carousel-container .carousel.hero-banner.scrollable div.slide-legend > p {
+    font-size: 22px;
+  }
+
+  .carousel-container .carousel.hero-banner.scrollable .carousel-slide .carousel-slide-logo {
+    left: 80px;
+    top: 100px;
+    width: 230px;
+  }
+}
+
+/* End of Vertical Carousel */
+
+/* Code to Ensure h2 is above the background */
+.carousel-bg-grey {
+  z-index: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.featured-projects.block h2
+ {
+  position: relative;
+  z-index: 2;
+  opacity: 1 !important;
+  transform: none !important;
+  transition: none !important;
+}
+
+.project-article-template.carousel-container {
+  margin: 0 !important;
+  background-color: #edecea !important;
+}
+
+.full-width.carousel-container {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.full-width.carousel-container .carousel-wrapper {
+  width: 100%;
+  position: relative;
+  padding: 0;
+  margin: 0;
+  max-width: 100%;
+}
+
+.carousel-container {
+  width: 100%;
+  padding: 0;
+}
+
+/* Full width carousel styles */
+.carousel-container .carousel-wrapper {
+  width: 100%;
+  position: relative;
+  padding: 0;
+  margin: auto;
+}
+
+.full-width.carousel-container .carousel.hero-banner {
+  width: 100vw;
+  position: relative;
+  height: 100%;
+}
+
+.carousel-container .carousel.hero-banner.scrollable {
+  height: 100%;
+}
+
+.carousel-container .carousel.hero-banner.scrollable.carousel-vertical .carousel-slide-indicators {
+  position: fixed;
+  z-index: 1;
+  display: unset;
+}
+
+.carousel-container .carousel.hero-banner.scrollable .carousel-slides-container {
+  display: block;
+  overflow-y: auto;
+  scroll-snap-type: y mandatory;
+  height: 100vh; /* each viewport shows one slide */
+}
+
+.carousel-container .carousel.hero-banner.scrollable .carousel-slides {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide {
+  height: 100%; /* full viewport per slide */
+  scroll-snap-align: start !important;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  transition: background-color 3s ease-in-out, opacity 3s ease-in-out;
+  opacity: 1;
+}
+
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide .slide-color {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: .8;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  transition: all 3s ease-in-out;
+}
+
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide.active .slide-color {
+  opacity: 0.2;
+}
+
+/* Slide 1 */
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide .slide-color.slide-color-1 {
+  background-color: var(--fondations-site-color);
+}
+
+/* Slide 2 */
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide .slide-color.slide-color-2 {
+  background-color: var(--biencommun-site-color-2);
+}
+
+/* Slide 3 */
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide .slide-color.slide-color-3 {
+  background-color: var(--site-color);
+}
+
+.carousel-container .carousel.hero-banner.scrollable .carousel-slide.active .carousel-slide-content {
+  opacity: 1;
 }
